# SABLE

./: .format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  alloc.c  asm.S  config  dev.c  elf.c  format_all.sh  hmac.c  mp.c  sable  sable.c  sable.ld  sha.c  string.c  tis.c  tpm.c  tpm_error.c  util.c
clearRam3/: Makefile  README  asm.S  dev.c  elf.c  sha.c  tis.c  tpm.c  util.c  zeroMem  zeroMem.c
clearRam3/include/: asm.h  boot_linux.h  dev.h  osl.h  pamplona.h  sha.h  tis.h  tpm.h
grub_secure/: 40_custom  Makefile_core  Makefile_top
grub_secure/grub_top/: 10_linux  20_linux_xen  30_os-prober  Makefile.in  config-util.h  config.h  config.status  configure  garbage-gen  grub-bios-setup  grub-editenv  grub-file  grub-fs-tester  grub-fstest  grub-glue-efi  grub-install  grub-macbless  grub-menulst2cfg  grub-mkconfig  grub-mkimage  grub-mklayout  grub-mknetdir  grub-mkpasswd-pbkdf2  grub-mkrelpath  grub-mkrescue  grub-mkstandalone  grub-ofpathname  grub-probe  grub-reboot  grub-render-label  grub-script-check  grub-set-default  grub-shell  grub-shell-tester  grub-sparc64-setup  grub-syslinux2cfg  grub_fstest.pp  grub_fstest_init.c  grub_fstest_init.lst  grub_script.tab.c  (+5 more)
grub_secure/grub_top/.deps-util/: grub_fstest-grub_fstest_init.Po  libgrubmods_a-grub_script.tab.Po  libgrubmods_a-grub_script.yy.Po  libgrubmods_a-libgrub_a_init.Po
grub_secure/grub_top/autom4te.cache/: output.0  requests  traces.0  traces.1
grub_secure/grub_top/docs/: Makefile  stamp-vti
grub_secure/grub_top/grub-core/: acpi.module  adler32.module  affs.module  afs.module  ahci.module  all_video.module  aout.module  archelp.module  at_keyboard.module  ata.module  backtrace.module  bfs.module  biosdisk.module  bitmap.module  bitmap_scale.module  blocklist.module  boot.image  boot.module  boot_hybrid.image  bsd.module  bswap_test.module  btrfs.module  bufio.module  build-grub-module-verifier  cat.module  cbfs.module  cbls.module  cbmemc.module  cbtable.module  cbtime.module  chain.module  cmdline_cat_test.module  cmosdump.module  cmostest.module  cmp.module  cmp_test.module  configfile.module  cpio.module  cpio_be.module  cpuid.module  (+245 more)
grub_secure/grub_top/grub-core/.deps-core/: kernel_exec-symlist.Po  normal_module-grub_script.tab.Po  normal_module-grub_script.yy.Po  normal_module-unidata.Po  trig_module-trigtables.Po
grub_secure/grub_top/grub-core/.deps-util/: libgrubmods_a-unidata.Po
grub_secure/grub_top/grub-core/bus/.deps-core/: cs5536_module-cs5536.Po  pci_module-pci.Po
grub_secure/grub_top/grub-core/commands/.deps-core/: acpi_module-acpi.Po  blocklist_module-blocklist.Po  boot_module-boot.Po  cat_module-cat.Po  cmp_module-cmp.Po  configfile_module-configfile.Po  date_module-date.Po  echo_module-echo.Po  eval_module-eval.Po  extcmd_module-extcmd.Po  file_module-file.Po  file_module-file32.Po  file_module-file64.Po  gptsync_module-gptsync.Po  halt_module-acpihalt.Po  hashsum_module-hashsum.Po  (+45 more)
grub_secure/grub_top/grub-core/disk/: luks.c
grub_secure/grub_top/grub-core/gnulib/: Makefile  configmake.h  locale.h  stdio.h  stdlib.h  string.h  unistd.h  wchar.h  wctype.h
grub_secure/grub_top/grub-core/hello/: hello.c
grub_secure/grub_top/include/tpm/: asm.h  hmac.c  hmac.h  platform.h  sable_tpm.h  sha.c  sha.h  tis.c  tpm.c  tpm_error.h  util.c  util.h
grub_secure/grub_top/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  grub.pot
grub_secure/grub_top/util/.deps-util/: grub_bios_setup-grub-setup.Po  grub_bios_setup-setup_bios.Po  grub_editenv-editenv.Po  grub_editenv-grub-editenv.Po  grub_file-grub-file.Po  grub_file-render-label.Po  grub_fstest-grub-fstest.Po  grub_glue_efi-glue-efi.Po  grub_glue_efi-grub-glue-efi.Po  grub_install-config.Po  grub_install-editenv.Po  grub_install-grub-install-common.Po  grub_install-grub-install.Po  grub_install-grub-mkimage32.Po  grub_install-grub-mkimage64.Po  grub_install-mkimage.Po  grub_install-probe.Po  grub_install-render-label.Po  grub_install-resolve.Po  grub_install-setup_bios.Po  grub_install-setup_sparc.Po  grub_macbless-grub-macbless.Po  grub_menulst2cfg-grub-menulst2cfg.Po  grub_mkimage-config.Po  grub_mkimage-grub-mkimage.Po  grub_mkimage-grub-mkimage32.Po  grub_mkimage-grub-mkimage64.Po  grub_mkimage-mkimage.Po  grub_mkimage-resolve.Po  grub_mklayout-grub-mklayout.Po  grub_mknetdir-config.Po  grub_mknetdir-editenv.Po  grub_mknetdir-grub-install-common.Po  grub_mknetdir-grub-mkimage32.Po  grub_mknetdir-grub-mkimage64.Po  grub_mknetdir-grub-mknetdir.Po  grub_mknetdir-mkimage.Po  grub_mknetdir-resolve.Po  grub_mknetdir-setup_bios.Po  grub_mknetdir-setup_sparc.Po  (+36 more)
grub_secure/grub_top/util/bash-completion.d/: Makefile
include/: all_headers.h  alloc.h  asm.h  dev.h  elf.h  exception.h  heap.h  hmac.h  isa_headers.h  keyboard.h  macro.h  mbi.h  mgf1.h  mp.h  option.h  platform.h  sable.h  sable_defs.h  sable_string.h  sable_tpm.h  sha.h  string.h  tcg.h  tis.h  tpm.h  tpm_command.h  tpm_error.h  tpm_ordinal.h  tpm_struct.h  util.h  version.h  version.h.in
include/arch-amd/: amd.h  asm.h  dev.h  mp.h
include/arch-intel/: acmod.h  acpi.h  amd.h  asm.h  atomic.h  cmdline.h  ctype.h  dev.h  hash.h  heap.h  integrity.h  intel_tpm.h  linux_defns.h  loader.h  msr.h  mtrrs.h  multiboot.h  page.h  printk.h  processor.h  smx.h  tb_error.h  tb_policy.h  tboot.h  txt.h  types.h  uuid.h  verify.h
include/cleanup/: util.h
src/: .tpm_struct.c.swp  alloc.c  asm.S  dev.c  elf.c  hmac.c  keyboard.c  mgf1.c  mp.c  sable.c  sable.ld  sable_string.c  sable_verified.c  sha.c  string.c  tis.c  tpm.c  tpm_error.c  tpm_struct.c  util.c  zeroMem.c
src/arch-amd/: amd.c  asm.S  asm2.S  dev.c  sable.ld
src/arch-intel/: .txt.c.swo  ToDos  acpi.c  amd.c  asm.S  cmdline.c  dev.c  e820.c  errors.c  heap.c  intel_tpm.c  linux.c  loader.c  mbi_print.c  misc.c  mp.c  mtrrs.c  mutex.S  platform_checks.c  post_launch.c  sable.ld  shutdown.S  sinit_acm.c  tpm_12.c  txt.c  verify.c  vmcs.c  wakeup.S
src/cleanup/: asm.S  cleanup.c  cleanup.ld  elf.c  util.c
tools/: CMakeLists.txt  cat_c.py  cat_macros.py
tools/makeheaders/: CMakeLists.txt
(+667 files in other folders)
